--- a/espace-admin/espace-admin.component.html
+++ b/espace-admin/espace-admin.component.html
@@ -16,7 +16,7 @@
          <!-- Remove "navbar-sticky" class to make navigation bar scrollable with the page -->
          <header class="header navbar navbar-expand-lg position-absolute navbar-sticky" style="background-color: #002148">
             <div class="container px-3">
-               <a  routerLink="/home" class="navbar-brand pe-3">
+               <a  routerLink="/" class="navbar-brand pe-3">
                <img src="assets/logo_stb.png" width="47" alt="" >
                STB Everywhere
                </a>
@@ -67,11 +67,7 @@
                         <p>Email :</p>
                         <p>adresse:</p>       
                         <div class="d-flex">
-                          <a href="" class="btn btn-outline-secondary px-3 px-lg-4 me-3">
-                            <i class="bx bx-edit fs-xl me-xl-2"></i>
-                            <span class="d-none d-xl-inline">Modifier vos information</span>
-                            
-                          </a>
+                          
                             <button class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal2">Update Image</button>
                           </div>
                           </div>
@@ -104,20 +100,28 @@
           <i class="bx bx-refresh"></i>
         </button>
         <!-- Sidebar (User info + Account menu) -->
+        
         <aside class="col-lg-3 col-md-4 border-end pb-5 mt-n5">
-          <div class="position-sticky top-0" >
+          <div class="position-sticky top-0">
             <div class="text-center pt-5">
-             
+              <div class="d-table position-relative mx-auto mt-2 mt-lg-4 pt-5 mb-3"></div>
+              <div id="account-menu" class="list-group list-group-flush d-md-block collapse" style="">
+                <a class="list-group-item list-group-item-action d-flex align-items-center text-white" mat-list-item routerLinkActive="active" routerLink="users">
+                  <span style="color: white;">Gestion utilisateurs</span>
+                </a>
+                <a class="list-group-item list-group-item-action d-flex align-items-center" mat-list-item routerLinkActive="active" routerLink="demande-carte">
+                  <span style="color: white;">    Gestion demandes cartes
+                  </span>
+                </a>
+                <a class="list-group-item list-group-item-action d-flex align-items-center" mat-list-item routerLinkActive="active" routerLink="demande-cheque">
+                  <span style="color: white;">             Gestion demandes chéquiers
 
-              <mat-nav-list  >
-                <a class="list-group-item list-group-item-action d-flex align-items-center" mat-list-item routerLinkActive="active" routerLink="users" tabindex="0" >  Gestion utilisateurs</a>
-                <a class="list-group-item list-group-item-action d-flex align-items-center" mat-list-item routerLinkActive="active" routerLink="demande-cheque">  Demande cheque</a>
-                <a class="list-group-item list-group-item-action d-flex align-items-center" mat-list-item routerLinkActive="active" routerLink="demande-carte">  Demande Cartes</a>
-
-
-              </mat-nav-list>
+                  </span>
+                </a>
+                
               </div>
             </div>
+          </div>
         </aside>
     
         <div class="col-lg-9 col-md-8">
