--- a/espace-admin/demande-carte/demande-carte.component.css
+++ b/espace-admin/demande-carte/demande-carte.component.css
@@ -1,28 +1,44 @@
-.card-requests-table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .card-requests-table th, .card-requests-table td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #2d1a42;
-  }
-  
-  .card-requests-table th {
-    background-color: #2a1250;
-  }
-  
-  .card-requests-table button {
-    padding: 5px 10px;
-    font-size: 14px;
-  }
-  
-  .card-requests-table button:first-child {
-    margin-right: 5px;
-  }
-  
-  .card-requests-table button:hover {
-    background-color: #dddddd;
-  }
-  
+.button-container {
+  display: flex;
+  gap: 10px; /* Espacement entre les boutons */
+}
+
+.accept-button {
+  background-color: rgb(113, 214, 113); /* Couleur du bouton "Accepter" */
+  color: white;
+}
+
+.refuse-button {
+  background-color: rgb(192, 60, 60); /* Couleur du bouton "Refuser" */
+  color: white;
+}
+.mat-table {
+  background-color: rgb(157, 192, 245); /* Replace "red" with your desired color */
+}
+.mat-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.mat-header-cell,
+.mat-cell {
+  padding: 12px;
+  text-align: left;
+}
+
+.header-row {
+  background-color: #003d86;
+  color: #ffffff;
+}
+
+.data-row:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.data-row:hover {
+  background-color: #eaeaea;
+}
+.mat-table tr:hover {
+  background-color: #f5f5f5; /* Change to the desired hover color */
+  cursor: pointer;
+}
