--- a/espace-admin/demande-cheque/demande-cheque.component.html
+++ b/espace-admin/demande-cheque/demande-cheque.component.html
@@ -1,24 +1,47 @@
-<table mat-table [dataSource]="users" class="mat-table">
-    <ng-container matColumnDef="nom">
-      <th mat-header-cell *matHeaderCellDef>Nom</th>
-      <td mat-cell *matCellDef="let user">{{ user.nom }}</td>
-    </ng-container>
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let user">{{ user.email }}</td>
-    </ng-container>
-    <ng-container matColumnDef="uid">
-      <th mat-header-cell *matHeaderCellDef>UID</th>
-      <td mat-cell *matCellDef="let user">{{ user.uid }}</td>
-    </ng-container>
-    <ng-container matColumnDef="demande">
-      <th mat-header-cell *matHeaderCellDef>Demande</th>
-      <td mat-cell *matCellDef="let user">
-        <input type="text" [(ngModel)]="user.demande" (change)="updateDemande(user, user.demande)">
-      </td>
-    </ng-container>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Email</th>
+    <td mat-cell *matCellDef="let demande">{{ demande.email }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="nombreChequier">
+    <th mat-header-cell *matHeaderCellDef>Nombre de chéquiers</th>
+    <td mat-cell *matCellDef="let demande">{{ demande.nombreChequier }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="rib">
+    <th mat-header-cell *matHeaderCellDef>RIB</th>
+    <td mat-cell *matCellDef="let demande">{{ demande.rib }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="cin">
+    <th mat-header-cell *matHeaderCellDef>CIN</th>
+    <td mat-cell *matCellDef="let demande">{{ demande.cin }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef>Action</th>
+    <td mat-cell *matCellDef="let demande">
+      <div class="button-container">
+        <button mat-icon-button class="accept-button" (click)="accepterDemande(demande)">
+          <mat-icon>check</mat-icon>
+        </button>
+        <button mat-icon-button class="refuse-button" (click)="refuserDemande(demande)">
+          <mat-icon>clear</mat-icon>
+        </button>
+      </div>
+    </td>
+  </ng-container>
   
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let user; columns: displayedColumns;"></tr>
-  </table>
+  <ng-container matColumnDef="statut">
+    <th mat-header-cell *matHeaderCellDef>Statut</th>
+    <td mat-cell *matCellDef="let demande">{{ demande.statut }}</td>
+  </ng-container>
   
+  
+
+  <!-- Ajoutez ici d'autres colonnes pour les autres champs de la collection "DemandeCheque" -->
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
