--- a/homepage/login/login.component.html
+++ b/homepage/login/login.component.html
@@ -23,6 +23,8 @@
       <br>
       <br>
       <button mat-raised-button type="button" color="primary" style="width: 100%;" routerLink="/register">Register</button>
+      <button mat-button color="warn" (click)="resetPassword()">Mot de passe oublié ?</button>
+
     </form>
   </mat-card>
   
